[gd_scene load_steps=11 format=2]

[ext_resource path="res://BounceChallenge.gd" type="Script" id=1]
[ext_resource path="res://Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.011976, 0.994012 )
colors = PoolColorArray( 0, 0, 0, 1, 0.917969, 0.787983, 0.0860596, 1, 0.949219, 0.795313, 0.0926971, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1280

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1144, 62 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1144, 62 )

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 524.544 )

[node name="GameSceneRoot" type="Node2D"]
position = Vector2( 4.29596, 1.43198 )
script = ExtResource( 1 )

[node name="Ground" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 8
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( 641.416, 729.16 )
scale = Vector2( 1.07506, 264.913 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 608, 659 )
shape = SubResource( 3 )

[node name="BallArea" type="Area2D" parent="Ground"]
editor/display_folded = true
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/BallArea"]
position = Vector2( 608, 650 )
shape = SubResource( 4 )

[node name="Player1Root" parent="." instance=ExtResource( 2 )]
position = Vector2( 227.899, 554.475 )
scale = Vector2( 3, 3 )
collision_mask = 30
JUMP_HEIGHT = 300

[node name="BallRoot" parent="." instance=ExtResource( 3 )]
position = Vector2( 597.75, 212.729 )
collision_mask = 61
physics_material_override = SubResource( 5 )
contacts_reported = 1
contact_monitor = true
SERVE_SPEED = 200

[node name="walls" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 16

[node name="Right" type="CollisionShape2D" parent="walls"]
position = Vector2( 827.647, 88.5699 )
shape = SubResource( 6 )

[node name="Left" type="CollisionShape2D" parent="walls"]
position = Vector2( -14.6056, 75.3197 )
shape = SubResource( 6 )

[node name="Top" type="CollisionShape2D" parent="walls"]
position = Vector2( 408.055, -113.925 )
scale = Vector2( 40, 0.1 )
shape = SubResource( 6 )

[node name="StartingPoint" type="Position2D" parent="."]
position = Vector2( 605, 150 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="playerstart" type="Position2D" parent="."]
position = Vector2( 227.899, 554.475 )

[connection signal="body_entered" from="Ground/BallArea" to="." method="_on_BallArea_body_entered"]
[connection signal="game_start" from="Player1Root" to="." method="_on_Player1Root_game_start"]
[connection signal="body_entered" from="BallRoot" to="." method="_on_BallRoot_body_entered"]
